@@ -81,7 +81,6 @@ if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
                               "--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED",
                               "--add-opens", "java.sql/java.sql=ALL-UNNAMED",
                               "--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED",
-                              "--add-opens", "java.base/sun.net.util=ALL-UNNAMED",
                               "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
                               "--add-opens", "java.base/sun.nio.cs=ALL-UNNAMED",
                               "--add-opens", "java.base/sun.security.action=ALL-UNNAMED",
